<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.gunasofinal.ComplainActivity">

    <EditText
        android:id="@+id/send_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sent_to"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/send_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_head"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/send_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_body"
        android:padding="10dp"/>
    <Button
        android:id="@+id/btn_send"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="15dp" />
    <Button
        android:id="@+id/btn_post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@color/colorPrimaryDark"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textColor="@color/icons"
        android:textSize="15dp" />

</LinearLayout>
